--- a/rekonsiliasi1.html
+++ b/rekonsiliasi1.html
@@ -158,8 +158,16 @@
                             class="btn btn-sm btn-primary"
                             type="reset"
                             style="margin-right: 2px"
+                            onclick="location.href='detail_rekonsiliasi1_100_a.html'"
                           >
                             Lihat
+                          </button>
+                          <button
+                            class="btn btn-sm btn-success"
+                            type="reset"
+                            style="margin-right: 2px"
+                          >
+                            Cetak Berita Acara
                           </button>
                         </td>
                       </tr>
@@ -174,8 +182,16 @@
                             class="btn btn-sm btn-primary"
                             type="reset"
                             style="margin-right: 2px"
+                            onclick="location.href='detail_rekonsiliasi1_100_b.html'"
                           >
                             Lihat
+                          </button>
+                          <button
+                            class="btn btn-sm btn-success"
+                            type="reset"
+                            style="margin-right: 2px"
+                          >
+                            Cetak Berita Acara
                           </button>
                         </td>
                       </tr>
@@ -192,8 +208,17 @@
                             class="btn btn-sm btn-primary"
                             type="reset"
                             style="margin-right: 2px"
+                            onclick="location.href='detail_rekonsiliasi1_75.html'"
                           >
                             Lihat
+                          </button>
+                          <button
+                            class="btn btn-sm btn-secondary"
+                            type="reset"
+                            style="margin-right: 2px"
+                            disabled
+                          >
+                            Cetak Berita Acara
                           </button>
                         </td>
                       </tr>
@@ -210,8 +235,17 @@
                             class="btn btn-sm btn-primary"
                             type="reset"
                             style="margin-right: 2px"
+                            onclick="location.href='detail_rekonsiliasi1_50.html'"
                           >
                             Lihat
+                          </button>
+                          <button
+                            class="btn btn-sm btn-secondary"
+                            type="reset"
+                            style="margin-right: 2px"
+                            disabled
+                          >
+                            Cetak Berita Acara
                           </button>
                         </td>
                       </tr>
@@ -226,8 +260,17 @@
                             class="btn btn-sm btn-primary"
                             type="reset"
                             style="margin-right: 2px"
+                            onclick="location.href='detail_rekonsiliasi1_50_f.html'"
                           >
                             Lihat
+                          </button>
+                          <button
+                            class="btn btn-sm btn-secondary"
+                            type="reset"
+                            style="margin-right: 2px"
+                            disabled
+                          >
+                            Cetak Berita Acara
                           </button>
                         </td>
                       </tr>
