--- a/keuangan.html
+++ b/keuangan.html
@@ -225,79 +225,170 @@
                     id="toggleRekonsiliasi"
                     style="display: none"
                   >
-                    <div class="card-header">
-                      <div class="row">
-                        <div class="col-md-12">
+                    <ul class="nav nav-tabs" id="myTab" role="tablist">
+                      <li class="nav-item" role="presentation">
+                        <button class="nav-link active" id="home-tab" data-coreui-toggle="tab" data-coreui-target="#home" type="button" role="tab" aria-controls="home" aria-selected="true">Data Rekonsiliasi</button>
+                      </li>
+                      <li class="nav-item" role="presentation">
+                        <button class="nav-link" id="profile-tab" data-coreui-toggle="tab" data-coreui-target="#profile" type="button" role="tab" aria-controls="profile" aria-selected="false">Data Awal</button>
+                      </li>
+                    </ul>
+                    <div class="tab-content" id="myTabContent">
+                      <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+                        <div class="card-header">
                           <div class="row">
-                            <div class="col-md-6">
-                              <label for=""><strong>Taspen</strong></label>
+                            <div class="col-md-12">
+                              <div class="row">
+                                <div class="col-md-6">
+                                  <label for=""><strong>Taspen</strong></label>
+                                </div>
+                                <div class="col-md-6">
+                                  <label for="" id="nama-pemkab1"
+                                    ><strong>Pemkab</strong></label
+                                  >
+                                </div>
+                              </div>
                             </div>
-                            <div class="col-md-6">
-                              <label for="" id="nama-pemkab"
-                                ><strong>Pemkab</strong></label
-                              >
+                          </div>
+                        </div>
+                        <div class="card-body">
+                          <div class="row">
+                            <div class="col-sm-12">
+                              <label for="">Induk</label>
+                              <div class="row">
+                                <div class="col-sm-6">
+                                  <ul class="list-group">
+                                    <li class="list-group-item">Rp 200.000.000</li>
+                                    <li class="list-group-item">Rp 500.000.000</li>
+                                    <li class="list-group-item list-group-item-success">= Rp 700.000.000</li>
+                                  </ul>
+                                </div>
+                                <div class="col-sm-6">
+                                  <ul class="list-group">
+                                    <li class="list-group-item">Rp 200.000.000</li>
+                                    <li class="list-group-item">Rp 500.000.000</li>
+                                    <li class="list-group-item list-group-item-success">= Rp 700.000.000</li>
+                                  </ul>
+                                </div>
+                              </div>
+                              <br />
+                              <label for="">Susulan</label>
+                              <div class="row">
+                                <div class="col-sm-6">
+                                  <ul class="list-group">
+                                    <li class="list-group-item">
+                                      <!-- <div class="col-from-label"> -->
+                                      <select class="form-control" id="ccmonth">
+                                        <option>Rp 175.000.000</option>
+                                        <option>Rp 175.000.000</option>
+                                      </select>
+                                      <!-- </div> -->
+                                    </li>
+                                    <li class="list-group-item">Rp 25.000.000</li>
+                                    <li class="list-group-item list-group-item-success">= Rp 200.000.000</li>
+                                  </ul>
+                                </div>
+                                <div class="col-sm-6">
+                                  <ul class="list-group">
+                                    <li class="list-group-item">Rp 100.000.000</li>
+                                    <li class="list-group-item">Rp 50.000.000</li>
+                                    <li class="list-group-item">Rp 50.000.000</li>
+                                    <li class="list-group-item list-group-item-success">= Rp 200.000.000</li>
+                                  </ul>
+                                </div>
+                              </div>
+                              <br />
+                              <label for="">Rapel</label>
+                              <div class="row">
+                                <div class="col-sm-6">
+                                  <ul class="list-group">
+                                    <li class="list-group-item">Rp 200.000.000</li>
+                                    <li class="list-group-item list-group-item-success">= Rp 200.000.000</li>
+                                  </ul>
+                                </div>
+                                <div class="col-sm-6">
+                                  <ul class="list-group">
+                                    <li class="list-group-item">Rp 200.000.000</li>
+                                    <li class="list-group-item list-group-item-success">= Rp 200.000.000</li>
+                                  </ul>
+                                </div>
+                              </div>
                             </div>
                           </div>
                         </div>
                       </div>
-                    </div>
-                    <div class="card-body">
-                      <div class="row">
-                        <div class="col-sm-12">
-                          <label for="">Induk</label>
+                      <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+                        <div class="card-header">
                           <div class="row">
-                            <div class="col-sm-6">
-                              <ul class="list-group">
-                                <li class="list-group-item">Rp 200.000.000</li>
-                                <li class="list-group-item">Rp 500.000.000</li>
-                              </ul>
-                            </div>
-                            <div class="col-sm-6">
-                              <ul class="list-group">
-                                <li class="list-group-item">Rp 200.000.000</li>
-                                <li class="list-group-item">Rp 500.000.000</li>
-                              </ul>
+                            <div class="col-md-12">
+                              <div class="row">
+                                <div class="col-md-6">
+                                  <label for=""><strong>Taspen</strong></label>
+                                </div>
+                                <div class="col-md-6">
+                                  <label for="" id="nama-pemkab2"
+                                    ><strong>Pemkab</strong></label
+                                  >
+                                </div>
+                              </div>
                             </div>
                           </div>
-                          <br />
-                          <label for="">Susulan</label>
+                        </div>
+                        <div class="card-body">
                           <div class="row">
-                            <div class="col-sm-6">
-                              <ul class="list-group">
-                                <li class="list-group-item">
-                                  <!-- <div class="col-from-label"> -->
-                                  <select class="form-control" id="ccmonth">
-                                    <option>Rp 98.700.000</option>
-                                    <option>Rp 99.000.000 dari Pemkab B</option>
-                                    <option>Rp 98.000.000 dari Pemkab C</option>
-                                    <option>Rp 98.500.000 dari Pemkab D</option>
-                                  </select>
-                                  <!-- </div> -->
-                                </li>
-                                <li class="list-group-item">Rp 50.000.000</li>
-                                <li class="list-group-item">Rp 50.000.000</li>
-                              </ul>
-                            </div>
-                            <div class="col-sm-6">
-                              <ul class="list-group">
-                                <li class="list-group-item">Rp 100.000.000</li>
-                                <li class="list-group-item">Rp 50.000.000</li>
-                                <li class="list-group-item">Rp 50.000.000</li>
-                              </ul>
-                            </div>
-                          </div>
-                          <br />
-                          <label for="">Rapel</label>
-                          <div class="row">
-                            <div class="col-sm-6">
-                              <ul class="list-group">
-                                <li class="list-group-item">Rp 200.000.000</li>
-                              </ul>
-                            </div>
-                            <div class="col-sm-6">
-                              <ul class="list-group">
-                                <li class="list-group-item">Rp 200.000.000</li>
-                              </ul>
+                            <div class="col-sm-12">
+                              <label for="">Induk</label>
+                              <div class="row">
+                                <div class="col-sm-6">
+                                  <ul class="list-group">
+                                    <li class="list-group-item">Rp 200.000.000</li>
+                                    <li class="list-group-item">Rp 500.000.000</li>
+                                    <li class="list-group-item list-group-item-success">= Rp 700.000.000</li>
+                                  </ul>
+                                </div>
+                                <div class="col-sm-6">
+                                  <ul class="list-group">
+                                    <li class="list-group-item">Rp 200.000.000</li>
+                                    <li class="list-group-item">Rp 500.000.000</li>
+                                    <li class="list-group-item list-group-item-success">= Rp 700.000.000</li>
+                                  </ul>
+                                </div>
+                              </div>
+                              <br />
+                              <label for="">Susulan</label>
+                              <div class="row">
+                                <div class="col-sm-6">
+                                  <ul class="list-group">
+                                    <li class="list-group-item">Rp 95.000.000</li>
+                                    <li class="list-group-item">Rp 25.000.000</li>
+                                    <li class="list-group-item list-group-item-danger">= Rp 120.000.000</li>
+                                  </ul>
+                                </div>
+                                <div class="col-sm-6">
+                                  <ul class="list-group">
+                                    <li class="list-group-item">Rp 100.000.000</li>
+                                    <li class="list-group-item">Rp 50.000.000</li>
+                                    <li class="list-group-item">Rp 50.000.000</li>
+                                    <li class="list-group-item list-group-item-danger">= Rp 200.000.000</li>
+                                  </ul>
+                                </div>
+                              </div>
+                              <br />
+                              <label for="">Rapel</label>
+                              <div class="row">
+                                <div class="col-sm-6">
+                                  <ul class="list-group">
+                                    <li class="list-group-item">Rp 200.000.000</li>
+                                    <li class="list-group-item list-group-item-success">= Rp 200.000.000</li>
+                                  </ul>
+                                </div>
+                                <div class="col-sm-6">
+                                  <ul class="list-group">
+                                    <li class="list-group-item">Rp 200.000.000</li>
+                                    <li class="list-group-item list-group-item-success">= Rp 200.000.000</li>
+                                  </ul>
+                                </div>
+                              </div>
                             </div>
                           </div>
                         </div>
@@ -319,8 +410,8 @@
                             <button
                               class="btn btn-sm btn-primary col-sm-3 disabled"
                               type="button"
-                              data-toggle="modal"
-                              data-target="#successModal"
+                              data-coreui-toggle="modal"
+                              data-coreui-target="#successModal"
                               style="margin-right: 2px"
                               id="button-rekonsil"
                             >
@@ -387,7 +478,8 @@
       function showRekon() {
         $("#toggleRekonsiliasi").show();
         var inputs = document.querySelector("#pemkab option:checked").value;
-        document.getElementById("nama-pemkab").innerHTML = "Pemkab " + inputs;
+        document.getElementById("nama-pemkab1").innerHTML = "Pemkab " + inputs;
+        document.getElementById("nama-pemkab2").innerHTML = "Pemkab " + inputs;
       }
 
       function enableSelesai() {
