--- a/rekonsiliasi.html
+++ b/rekonsiliasi.html
@@ -18,6 +18,7 @@
       rel="stylesheet"
       href="https://unpkg.com/@coreui/icons@2.0.0-beta.3/css/free.min.css"
     />
+    <link rel="stylesheet" type="text/css" href="css/print.min.css">
     <link
       rel="stylesheet"
       href="https://unpkg.com/@coreui/icons@2.0.0-beta.3/css/brand.min.css"
@@ -167,8 +168,17 @@
                             class="btn btn-sm btn-primary"
                             type="reset"
                             style="margin-right: 2px"
+                            onclick="location.href='detail_rekonsiliasi_50.html'"
                           >
                             Lihat
+                          </button>
+                          <button
+                            class="btn btn-sm btn-secondary"
+                            type="reset"
+                            style="margin-right: 2px"
+                            disabled
+                          >
+                            Cetak Berita Acara
                           </button>
                         </td>
                       </tr>
@@ -184,8 +194,19 @@
                             class="btn btn-sm btn-primary"
                             type="reset"
                             style="margin-right: 2px"
+                            onclick="location.href='detail_rekonsiliasi_100.html'"
                           >
                             Lihat
+                          </button>
+                          <button
+                            class="btn btn-sm btn-success"
+                            type="reset"
+                            style="margin-right: 2px"
+                            id="cetakcetak"
+                            onclick="printJS('../berita_acara.pdf')"
+                            value="Berita Acara"
+                          >
+                            Cetak Berita Acara
                           </button>
                         </td>
                       </tr>
@@ -203,8 +224,17 @@
                             class="btn btn-sm btn-primary"
                             type="reset"
                             style="margin-right: 2px"
+                            onclick="location.href='detail_rekonsiliasi_0.html'"
                           >
                             Lihat
+                          </button>
+                          <button
+                            class="btn btn-sm btn-secondary"
+                            type="reset"
+                            style="margin-right: 2px"
+                            disabled
+                          >
+                            Cetak Berita Acara
                           </button>
                         </td>
                       </tr>
@@ -222,8 +252,17 @@
                             class="btn btn-sm btn-primary"
                             type="reset"
                             style="margin-right: 2px"
+                            onclick="location.href='detail_rekonsiliasi_75.html'"
                           >
                             Lihat
+                          </button>
+                          <button
+                            class="btn btn-sm btn-secondary"
+                            type="reset"
+                            style="margin-right: 2px"
+                            disabled
+                          >
+                            Cetak Berita Acara
                           </button>
                         </td>
                       </tr>
@@ -239,8 +278,17 @@
                             class="btn btn-sm btn-primary"
                             type="reset"
                             style="margin-right: 2px"
+                            onclick="location.href='detail_rekonsiliasi_25.html'"
                           >
                             Lihat
+                          </button>
+                          <button
+                            class="btn btn-sm btn-secondary"
+                            type="reset"
+                            style="margin-right: 2px"
+                            disabled
+                          >
+                            Cetak Berita Acara
                           </button>
                         </td>
                       </tr>
@@ -268,5 +316,28 @@
     <!-- Optional JavaScript -->
     <!-- Popper.js first, then CoreUI JS -->
     <script src="https://unpkg.com/@coreui/coreui/dist/js/coreui.bundle.min.js"></script>
+    <script src="js/print.min.js"></script>
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+    <script type="text/javascript">
+      // $("#cetakcetak").live("click", function () {
+      //       var divContents = $("#dvContainer").html();
+      //       var printWindow = window.open('', '', 'height=1200,width=1500');
+      //       // printWindow.document.write('<html><head><title>Berita Acara</title>');
+      //       // printWindow.document.write('</head><body >');
+      //       // printWindow.document.write('<p>Hello');
+      //       // printWindow.document.write('</body></html>');
+      //       printWindow.document.close();
+      //       printWindow.print();
+      //   });
+
+      let print = (doc) => {
+          let objFra = document.createElement('iframe');   // Create an IFrame.
+          objFra.style.visibility = 'hidden';    // Hide the frame.
+          objFra.src = doc;                      // Set source.
+          document.body.appendChild(objFra);  // Add the frame to the web page.
+          objFra.contentWindow.focus();       // Set focus.
+          objFra.contentWindow.print();      // Print it.
+      }
+    </script>
   </body>
 </html>
