--- a/rekonsiliasi.html
+++ b/rekonsiliasi.html
@@ -203,7 +203,7 @@
                             type="reset"
                             style="margin-right: 2px"
                             id="cetakcetak"
-                            onclick="printJS('../berita_acara.pdf')"
+                            onclick="printJS('./berita_acara.pdf')"
                             value="Berita Acara"
                           >
                             Cetak Berita Acara
