--- a/rekonsiliasi.html
+++ b/rekonsiliasi.html
@@ -316,28 +316,7 @@
     <!-- Optional JavaScript -->
     <!-- Popper.js first, then CoreUI JS -->
     <script src="https://unpkg.com/@coreui/coreui/dist/js/coreui.bundle.min.js"></script>
-    <script src="js/print.min.js"></script>
+    <script src="https://printjs-4de6.kxcdn.com/print.min.js"></script>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-    <script type="text/javascript">
-      // $("#cetakcetak").live("click", function () {
-      //       var divContents = $("#dvContainer").html();
-      //       var printWindow = window.open('', '', 'height=1200,width=1500');
-      //       // printWindow.document.write('<html><head><title>Berita Acara</title>');
-      //       // printWindow.document.write('</head><body >');
-      //       // printWindow.document.write('<p>Hello');
-      //       // printWindow.document.write('</body></html>');
-      //       printWindow.document.close();
-      //       printWindow.print();
-      //   });
-
-      let print = (doc) => {
-          let objFra = document.createElement('iframe');   // Create an IFrame.
-          objFra.style.visibility = 'hidden';    // Hide the frame.
-          objFra.src = doc;                      // Set source.
-          document.body.appendChild(objFra);  // Add the frame to the web page.
-          objFra.contentWindow.focus();       // Set focus.
-          objFra.contentWindow.print();      // Print it.
-      }
-    </script>
   </body>
 </html>
