--- a/rekonsiliasi.html
+++ b/rekonsiliasi.html
@@ -203,7 +203,6 @@
                             type="reset"
                             style="margin-right: 2px"
                             id="cetakcetak"
-                            onclick="printnih()"
                             value="Berita Acara"
                           >
                             Cetak Berita Acara
@@ -317,24 +316,11 @@
     <!-- Popper.js first, then CoreUI JS -->
     <script src="https://unpkg.com/@coreui/coreui/dist/js/coreui.bundle.min.js"></script>
     <script src="https://printjs-4de6.kxcdn.com/print.min.js"></script>
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
     <script type="text/javascript">
       $("#cetakcetak").live("click", function () {
         printJS('https://zulzula.github.io/prototype-rekonsiliasi/berita_acara.pdf')
         });
-
-      let print = (doc) => {
-          let objFra = document.createElement('iframe');   // Create an IFrame.
-          objFra.style.visibility = 'hidden';    // Hide the frame.
-          objFra.src = doc;                      // Set source.
-          document.body.appendChild(objFra);  // Add the frame to the web page.
-          objFra.contentWindow.focus();       // Set focus.
-          objFra.contentWindow.print();      // Print it.
-      }
-
-      let printnih = () => {
-        
-      }
     </script>
   </body>
 </html>
