finish print berita acara

--- a/rekonsiliasi1.html
+++ b/rekonsiliasi1.html
@@ -166,6 +166,7 @@
                             class="btn btn-sm btn-success"
                             type="reset"
                             style="margin-right: 2px"
+                            id="cetakcetak"
                           >
                             Cetak Berita Acara
                           </button>
@@ -190,6 +191,7 @@
                             class="btn btn-sm btn-success"
                             type="reset"
                             style="margin-right: 2px"
+                            id="cetakcetak1"
                           >
                             Cetak Berita Acara
                           </button>
@@ -298,5 +300,15 @@
     <!-- Optional JavaScript -->
     <!-- Popper.js first, then CoreUI JS -->
     <script src="https://unpkg.com/@coreui/coreui/dist/js/coreui.bundle.min.js"></script>
+    <script src="https://printjs-4de6.kxcdn.com/print.min.js"></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+    <script type="text/javascript">
+      $("#cetakcetak").live("click", function () {
+        printJS('https://zulzula.github.io/prototype-rekonsiliasi/docs/berita_acara.pdf')
+        });
+        $("#cetakcetak1").live("click", function () {
+        printJS('https://zulzula.github.io/prototype-rekonsiliasi/docs/berita_acara.pdf')
+        });
+    </script>
   </body>
 </html>
