--- a/rekonsiliasi.html
+++ b/rekonsiliasi.html
@@ -62,8 +62,8 @@
           </a>
         </li>
         <li class="c-sidebar-nav-item">
-          <a href="kepesertaan.html" class="c-sidebar-nav-link">
-            <i class="c-sidebar-nav-icon cil-group"></i> Kepesertaan
+          <a href="tinjut.html" class="c-sidebar-nav-link">
+            <i class="c-sidebar-nav-icon cil-group"></i> Tindak Lanjut PMK
           </a>
         </li>
         <li class="c-sidebar-nav-item">
