--- a/detail_rekonsiliasi_25.html
+++ b/detail_rekonsiliasi_25.html
@@ -61,8 +61,8 @@
           </a>
         </li>
         <li class="c-sidebar-nav-item">
-          <a href="kepesertaan.html" class="c-sidebar-nav-link">
-            <i class="c-sidebar-nav-icon cil-group"></i> Kepesertaan
+          <a href="tinjut.html" class="c-sidebar-nav-link">
+            <i class="c-sidebar-nav-icon cil-group"></i> Tindak Lanjut PMK
           </a>
         </li>
         <li class="c-sidebar-nav-item">
@@ -77,7 +77,7 @@
         </li>
       </ul>
       <button
-        class="c-sidebar-minimizer sidebar-toggler"
+        class="c-sidebar-minimizer c-class-toggler"
         type="button"
         data-target="_parent"
         data-class="c-sidebar-minimized"
